Add material list to activity screen

--- a/geppetto/Views/Components/Card.xib
+++ b/geppetto/Views/Components/Card.xib
@@ -78,7 +78,7 @@
     <resources>
         <image name="alesia-kazantceva-VWcPlbHglYc-unsplash" width="2736" height="1824"/>
         <namedColor name="AccentColor">
-            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58399999141693115" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
