--- a/geppetto/Views/Storyboards/ActivityStep.storyboard
+++ b/geppetto/Views/Storyboards/ActivityStep.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fej-cz-GZT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fej-cz-GZT">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,60 +27,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Index" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m1K-Cs-laX">
-                                <rect key="frame" x="20" y="324" width="90" height="23"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jiq-as-X68">
-                                <rect key="frame" x="0.0" y="44" width="414" height="256"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="OhK-h6-JGe">
+                                <rect key="frame" x="0.0" y="44" width="414" height="400"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jiq-as-X68">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="256"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="256" id="Jew-es-EqZ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="mQ4-5i-ZBr" userLabel="Main Info">
+                                        <rect key="frame" x="16" y="272" width="382" height="48"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Index" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m1K-Cs-laX">
+                                                <rect key="frame" x="0.0" y="0.0" width="90" height="23"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Owt-NS-DQT">
+                                                <rect key="frame" x="0.0" y="31" width="72.5" height="17"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Cul-IZ-Ops">
+                                        <rect key="frame" x="16" y="336" width="382" height="64"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diquinha da Juntu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xy-l5-d1M">
+                                                <rect key="frame" x="0.0" y="8" width="153" height="23"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="juntuTipText" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGe-Vv-hhh">
+                                                <rect key="frame" x="0.0" y="39" width="77.5" height="17"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="0.0" bottom="8" trailing="8"/>
+                                    </stackView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="256" id="Jew-es-EqZ"/>
+                                    <constraint firstItem="mQ4-5i-ZBr" firstAttribute="leading" secondItem="OhK-h6-JGe" secondAttribute="leading" constant="16" id="AmR-lj-zjy"/>
+                                    <constraint firstAttribute="trailing" secondItem="mQ4-5i-ZBr" secondAttribute="trailing" constant="16" id="N3h-vi-URn"/>
+                                    <constraint firstItem="Cul-IZ-Ops" firstAttribute="leading" secondItem="OhK-h6-JGe" secondAttribute="leading" constant="16" id="Qky-G4-clH"/>
+                                    <constraint firstAttribute="trailing" secondItem="Cul-IZ-Ops" secondAttribute="trailing" constant="16" id="kqT-CH-Qkh"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Owt-NS-DQT">
-                                <rect key="frame" x="20" y="355" width="374" height="17"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diquinha da Juntu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Xy-l5-d1M">
-                                <rect key="frame" x="20" y="396" width="153" height="23"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="referencesText" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGe-Vv-hhh">
-                                <rect key="frame" x="20" y="427" width="374" height="17"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8FI-3E-imV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="jiq-as-X68" firstAttribute="top" secondItem="8FI-3E-imV" secondAttribute="top" id="8FC-Ce-YVT"/>
-                            <constraint firstItem="Owt-NS-DQT" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" constant="20" id="AG8-Cf-Qn3"/>
-                            <constraint firstItem="QGe-Vv-hhh" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" constant="20" id="Gqb-eI-Iuu"/>
-                            <constraint firstItem="m1K-Cs-laX" firstAttribute="top" secondItem="jiq-as-X68" secondAttribute="bottom" constant="24" id="KEP-6w-n1a"/>
-                            <constraint firstItem="jiq-as-X68" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" id="MGL-Kl-c8T"/>
-                            <constraint firstItem="8FI-3E-imV" firstAttribute="trailing" secondItem="jiq-as-X68" secondAttribute="trailing" id="PFc-KA-JEF"/>
-                            <constraint firstItem="5Xy-l5-d1M" firstAttribute="top" secondItem="Owt-NS-DQT" secondAttribute="bottom" constant="24" id="Pn0-du-Q73"/>
-                            <constraint firstItem="Owt-NS-DQT" firstAttribute="top" secondItem="m1K-Cs-laX" secondAttribute="bottom" constant="8" id="T3v-7T-JlI"/>
-                            <constraint firstItem="8FI-3E-imV" firstAttribute="trailing" secondItem="Owt-NS-DQT" secondAttribute="trailing" constant="20" id="TbN-61-icP"/>
-                            <constraint firstItem="m1K-Cs-laX" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" constant="20" id="Y72-dF-JGD"/>
-                            <constraint firstItem="QGe-Vv-hhh" firstAttribute="top" secondItem="5Xy-l5-d1M" secondAttribute="bottom" constant="8" id="hg5-MY-hr5"/>
-                            <constraint firstItem="8FI-3E-imV" firstAttribute="trailing" secondItem="QGe-Vv-hhh" secondAttribute="trailing" constant="20" id="mch-0S-dnK"/>
-                            <constraint firstItem="5Xy-l5-d1M" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" constant="20" id="ziD-4H-3s2"/>
+                            <constraint firstItem="OhK-h6-JGe" firstAttribute="trailing" secondItem="8FI-3E-imV" secondAttribute="trailing" id="3lP-J4-jOw"/>
+                            <constraint firstItem="OhK-h6-JGe" firstAttribute="centerX" secondItem="36T-Um-fAm" secondAttribute="centerX" id="W4w-16-o37"/>
+                            <constraint firstItem="OhK-h6-JGe" firstAttribute="leading" secondItem="8FI-3E-imV" secondAttribute="leading" id="rRT-Eg-hdB"/>
+                            <constraint firstItem="OhK-h6-JGe" firstAttribute="top" secondItem="8FI-3E-imV" secondAttribute="top" id="s3b-2L-cS0"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="image" destination="jiq-as-X68" id="ZhF-Wd-N2W"/>
                         <outlet property="indexLabel" destination="m1K-Cs-laX" id="rH4-bh-Lrd"/>
                         <outlet property="instructions" destination="Owt-NS-DQT" id="Zpo-Ye-H3z"/>
-                        <outlet property="references" destination="QGe-Vv-hhh" id="Os9-7r-Jev"/>
+                        <outlet property="juntuTip" destination="Cul-IZ-Ops" id="aOe-ji-f27"/>
+                        <outlet property="juntuTipText" destination="QGe-Vv-hhh" id="Os9-7r-Jev"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dop-A8-zXl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
