--- a/geppetto/Views/Storyboards/Profile.storyboard
+++ b/geppetto/Views/Storyboards/Profile.storyboard
@@ -17,25 +17,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile Screen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MwP-ii-8eo">
-                                <rect key="frame" x="154" y="437.5" width="106.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="IUf-Tc-M96">
+                                <rect key="frame" x="80" y="246" width="254" height="32"/>
+                                <segments>
+                                    <segment title="Momentos"/>
+                                    <segment title="Favoritos"/>
+                                    <segment title="Histórico"/>
+                                </segments>
+                            </segmentedControl>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cnx-Os-672">
+                                <rect key="frame" x="0.0" y="74" width="414" height="150"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="MwP-ii-8eo" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="8U9-zT-wif"/>
-                            <constraint firstItem="MwP-ii-8eo" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="RYZ-xq-4IB"/>
+                            <constraint firstItem="cnx-Os-672" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="WoC-Wr-aYi"/>
+                            <constraint firstItem="IUf-Tc-M96" firstAttribute="firstBaseline" secondItem="cnx-Os-672" secondAttribute="baseline" constant="20" symbolType="layoutAnchor" id="ehX-yf-WIC"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="top" secondItem="cnx-Os-672" secondAttribute="top" constant="14" id="gnq-t1-Vfb"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cnx-Os-672" secondAttribute="trailing" id="gxV-nF-qV2"/>
+                            <constraint firstItem="IUf-Tc-M96" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="qtN-kW-ihj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lou-43-4eT"/>
+                    <connections>
+                        <outlet property="profileImage" destination="cnx-Os-672" id="IOO-Ta-ewv"/>
+                        <outlet property="profileSegmentedControl" destination="IUf-Tc-M96" id="byo-Rv-Rtn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="116"/>
+            <point key="canvasLocation" x="131.8840579710145" y="115.84821428571428"/>
         </scene>
         <!--Profile-->
         <scene sceneID="U8O-tJ-8cJ">
@@ -58,6 +71,9 @@
     </scenes>
     <resources>
         <image name="person.circle" catalog="system" width="128" height="121"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
