--- a/geppetto/Views/Storyboards/Profile.storyboard
+++ b/geppetto/Views/Storyboards/Profile.storyboard
@@ -17,31 +17,71 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="IUf-Tc-M96">
-                                <rect key="frame" x="80" y="246" width="254" height="32"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="IUf-Tc-M96">
+                                <rect key="frame" x="16" y="307" width="382" height="32"/>
                                 <segments>
                                     <segment title="Momentos"/>
                                     <segment title="Favoritos"/>
                                     <segment title="Histórico"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentedControlChanged:" destination="Y6W-OH-hqX" eventType="valueChanged" id="bjD-te-Rhy"/>
+                                </connections>
                             </segmentedControl>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cnx-Os-672">
-                                <rect key="frame" x="0.0" y="74" width="414" height="150"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cnx-Os-672">
+                                <rect key="frame" x="0.0" y="141" width="414" height="150"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="cnx-Os-672" secondAttribute="height" multiplier="69:25" id="os8-JH-c9M"/>
+                                </constraints>
                             </imageView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQy-pA-6sM">
+                                <rect key="frame" x="0.0" y="354" width="414" height="459"/>
+                                <connections>
+                                    <segue destination="KYR-En-QxV" kind="embed" id="k3F-1f-l1T"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pW3-w2-CFb">
+                                <rect key="frame" x="0.0" y="354" width="414" height="459"/>
+                                <connections>
+                                    <segue destination="XwS-4R-gES" kind="embed" id="lie-I4-n5Y"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TP2-7J-I02">
+                                <rect key="frame" x="0.0" y="354" width="414" height="459"/>
+                                <connections>
+                                    <segue destination="uGa-Y6-dyi" kind="embed" id="pFp-4U-dg7"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="cnx-Os-672" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="WoC-Wr-aYi"/>
-                            <constraint firstItem="IUf-Tc-M96" firstAttribute="firstBaseline" secondItem="cnx-Os-672" secondAttribute="baseline" constant="20" symbolType="layoutAnchor" id="ehX-yf-WIC"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="top" secondItem="cnx-Os-672" secondAttribute="top" constant="14" id="gnq-t1-Vfb"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cnx-Os-672" secondAttribute="trailing" id="gxV-nF-qV2"/>
-                            <constraint firstItem="IUf-Tc-M96" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="qtN-kW-ihj"/>
+                            <constraint firstItem="pW3-w2-CFb" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="8U7-hr-rke"/>
+                            <constraint firstItem="IUf-Tc-M96" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="9Xa-3N-g4c"/>
+                            <constraint firstItem="pW3-w2-CFb" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="B86-5R-l3y"/>
+                            <constraint firstItem="IUf-Tc-M96" firstAttribute="top" secondItem="cnx-Os-672" secondAttribute="bottom" constant="16" id="GSW-sj-s89"/>
+                            <constraint firstAttribute="trailing" secondItem="cnx-Os-672" secondAttribute="trailing" id="GY1-Ts-a1G"/>
+                            <constraint firstItem="IQy-pA-6sM" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="NEP-El-858"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="IUf-Tc-M96" secondAttribute="trailing" constant="16" id="Pjf-is-qzS"/>
+                            <constraint firstItem="pW3-w2-CFb" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="16" id="cEy-PY-nBL"/>
+                            <constraint firstItem="TP2-7J-I02" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="dIK-Qh-aQX"/>
+                            <constraint firstItem="TP2-7J-I02" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="16" id="fZa-Rf-QLa"/>
+                            <constraint firstItem="cnx-Os-672" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" id="faW-Xs-Q5B"/>
+                            <constraint firstItem="IQy-pA-6sM" firstAttribute="top" secondItem="IUf-Tc-M96" secondAttribute="bottom" constant="16" id="k5A-h6-4L3"/>
+                            <constraint firstItem="pW3-w2-CFb" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="lS7-MW-jrL"/>
+                            <constraint firstItem="cnx-Os-672" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="53" id="laz-C5-Anp"/>
+                            <constraint firstItem="TP2-7J-I02" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="om4-H3-rvJ"/>
+                            <constraint firstItem="IQy-pA-6sM" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="roj-ZG-Nvw"/>
+                            <constraint firstItem="TP2-7J-I02" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="s9H-eZ-IA0"/>
+                            <constraint firstItem="IQy-pA-6sM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="wWe-w8-RT1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="lou-43-4eT"/>
                     <connections>
+                        <outlet property="favoritesContainer" destination="TP2-7J-I02" id="oi7-Om-70j"/>
+                        <outlet property="historyContainer" destination="pW3-w2-CFb" id="gfi-Hf-GME"/>
+                        <outlet property="momentsContainer" destination="IQy-pA-6sM" id="1ZB-Fd-qFl"/>
                         <outlet property="profileImage" destination="cnx-Os-672" id="IOO-Ta-ewv"/>
                         <outlet property="profileSegmentedControl" destination="IUf-Tc-M96" id="byo-Rv-Rtn"/>
                     </connections>
@@ -68,6 +108,48 @@
             </objects>
             <point key="canvasLocation" x="-714" y="116"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="H2b-Qu-Ycy">
+            <objects>
+                <viewController id="KYR-En-QxV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wui-jG-3v4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="459"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="weY-HG-3N6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1025" y="450"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Qp0-ce-3Ec">
+            <objects>
+                <viewController id="XwS-4R-gES" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="J5E-Iw-6fG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="459"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q5E-7N-XtQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1025" y="69"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="aAL-iO-SUa">
+            <objects>
+                <viewController id="uGa-Y6-dyi" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hfb-WV-wSn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="459"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.37647058820000001" green="0.1176470588" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lVw-OQ-UNc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1025" y="-299"/>
+        </scene>
     </scenes>
     <resources>
         <image name="person.circle" catalog="system" width="128" height="121"/>
@@ -76,6 +158,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
